--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ru.dmitriev.squareorderedlayout.SquareOrderedLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
-    android:layout_height="400dp"
+    android:id="@+id/square_ordered_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_margin="20dp"
     android:padding="10dp">
 
-    <!-- put first view to left. -->
     <View
-        android:id="@+id/view1"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:background="#f90" />
+        android:layout_margin="10dp"
+        android:background="#f90"
+        android:padding="5dp" />
 
     <View
         android:layout_width="200dp"
@@ -20,6 +21,7 @@
     <View
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_margin="10dp"
         android:background="#a0f" />
 
 </ru.dmitriev.squareorderedlayout.SquareOrderedLayout>
