--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ru.dmitriev.squareorderedlayout.SquareOrderedLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/square_ordered_container"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="20dp"
-    android:padding="10dp">
+    android:orientation="vertical">
 
-    <View
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_margin="10dp"
-        android:background="#f90"
-        android:padding="5dp" />
+    <Button
+        android:id="@+id/unhide"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Unhide" />
 
-    <View
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:background="#9f0" />
+    <ru.dmitriev.areaorderedlayout.AreaOrderedLayout
+        android:id="@+id/area_ordered_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="40dp"
+        android:padding="15dp">
 
-    <View
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_margin="10dp"
-        android:background="#a0f" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_margin="10dp"
+            android:background="#9f0"
+            android:padding="20dp" />
 
-</ru.dmitriev.squareorderedlayout.SquareOrderedLayout>
+        <View
+            android:layout_width="10000dp"
+            android:layout_height="20dp"
+            android:layout_margin="10dp"
+            android:background="#f90"
+            android:padding="20dp" />
+
+        <View
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_margin="10dp"
+            android:background="#a0f" />
+
+        <View
+            android:id="@+id/hidden"
+            android:layout_width="700dp"
+            android:layout_height="100dp"
+            android:layout_margin="10dp"
+            android:background="#bcf"
+            android:visibility="gone" />
+    </ru.dmitriev.areaorderedlayout.AreaOrderedLayout>
+</LinearLayout>
+
